# github.py

./: .gitignore  DEPLOY.md  README.md
github-contributions/: requirements.txt  setup.cfg
github-contributions-python/: README.md  setup.cfg
github-contributions-python/tests/: __init__.py
github-languages/: README.md  requirements.txt  setup.cfg
github-languages-python/: setup.cfg
github-trending/: README.md  setup.cfg  setup.py
github-trending-python/: setup.cfg
