# -*- coding: utf-8 -*-
[metadata]
name = github_trending_python
version = 0.1.0-RC
author = Ying Wang
author-email = upcwangying@126.com
home-page = https://github.com/gitterapp/github-python/tree/master/github-trending-python
url = https://github.com/gitterapp/github-python/tree/master/github-trending-python
project_urls =
    Source=https://github.com/gitterapp/github-python
    Tracker=https://github.com/gitterapp/github-python/issues
description = GitHub Trending
long-description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE.md
platform = any
keywords = github, trending, github-trending
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = find:
test_suite = tests
setup_requires =
    setuptools
	# setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
	request >= 2.19.0

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
